@@ -11,6 +11,7 @@ v7.14.0 (unreleased)
   - Allow to define variables from YAML
   - Added support for CI skipped status
   - Fix broken yaml error saving
+  - Add committed_at to commits to properly order last commit (the force push issue)
   - Rename type(s) to stage(s)
   - Fix navigation icons
   - Add missing stage when doing retry
